Fixed small styling issues on mobile.

--- a/src/style.sass
+++ b/src/style.sass
@@ -376,6 +376,7 @@ h2
 
 .bio-header
     width: 771px
+    max-width: 90vw
     @media screen and ( max-width: $default )
         width: unset
 
@@ -671,6 +672,7 @@ h2
 
 .project-image
     width: auto
+    max-width: 90vw
     height: auto
     max-height: 221px
     overflow: hidden
